--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,30 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import cv2"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,17 +46,17 @@
     "        image = cv2.resize(image, (w, h))\n",
     "\n",
     "    return image"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   },
    "outputs": [],
    "source": [
     "def center_crop(image, size):\n",
@@ -78,50 +75,50 @@
     "        image = cv2.resize(image, (size, size))\n",
     "\n",
     "    return image"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "image_names = os.listdir('data/raw')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   },
    "outputs": [],
    "source": [
     "def resize_image(image, size):\n",
     "    image = scale_image(image, size)\n",
     "    image = center_crop(image, size)\n",
     "    return image"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   },
    "outputs": [],
    "source": [
     "INPUT_DIR = 'data/raw/'\n",
@@ -130,27 +127,27 @@
     "    image = cv2.imread(INPUT_DIR + image_name)\n",
     "    image_p = resize_image(image, 256)\n",
     "    cv2.imwrite(OUTPUT_DIR + image_name, image_p)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Convert RGB image to Lab image\n",
+    "Save the Black & White image and the a and b values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Convert RGB image to Lab image\n",
-    "Save the Black & White image and the a and b values"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   },
    "outputs": [],
    "source": [
     "INPUT_DIR = 'data/cropped/'\n",
@@ -167,29 +164,29 @@
     "    cv2.imwrite(OUTPUT_IMAGE_DIR + file_name, l)\n",
     "    cv2.imwrite(OUTPUT_A_DIR + file_name, a)\n",
     "    cv2.imwrite(OUTPUT_B_DIR + file_name, b)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Read L, a, b values and convert it to a RGB image\n"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Read L, a, b values and convert it to a RGB image\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -202,32 +199,36 @@
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
     "cv2.imwrite('001.jpeg', img)\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7251791416c4cf7805f32cf3351ab26a3a938d6d375d87f0e526b8adc7b7ffc7"
+  },
   "kernelspec": {
-   "name": "pycharm-db3b9cab",
+   "display_name": "PyCharm (aero-color)",
    "language": "python",
-   "display_name": "PyCharm (aero-color)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
