--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -180,20 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "L = cv2.imread(OUTPUT_IMAGE_DIR + '3.jpeg', 0)\n",
-    "a = cv2.imread(OUTPUT_A_DIR + '3.jpeg', 0)\n",
-    "b = cv2.imread(OUTPUT_B_DIR + '3.jpeg', 0)\n",
+    "OUTPUT_IMAGE_DIR = 'data/bnw/'\n",
+    "OUTPUT_A_DIR = 'data/a/'\n",
+    "OUTPUT_B_DIR = 'data/b/'\n",
+    "L = cv2.imread(OUTPUT_IMAGE_DIR + '1.jpeg', 0)\n",
+    "a = cv2.imread(OUTPUT_A_DIR + '1.jpeg', 0)\n",
+    "b = cv2.imread(OUTPUT_B_DIR + '1.jpeg', 0)\n",
     "\n",
     "lab = np.array([L, a, b]).transpose((1, 2, 0))\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
@@ -214,9 +225,9 @@
    "hash": "7251791416c4cf7805f32cf3351ab26a3a938d6d375d87f0e526b8adc7b7ffc7"
   },
   "kernelspec": {
-   "display_name": "PyCharm (aero-color)",
+   "name": "pycharm-db3b9cab",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (aero-color)"
   },
   "language_info": {
    "codemirror_mode": {
