--- a/main.ipynb
+++ b/main.ipynb
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(256, 256)"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
+    "A[0, 0, 0] = 255\n",
     "bins = np.arange(33) * 8\n",
-    "a_binned = np.digitize(A, bins, right=True)\n",
-    "b_binned = np.digitize(B, bins, right=True)"
+    "a_binned = np.digitize(A, bins) - 1\n",
+    "b_binned = np.digitize(B, bins) - 1\n",
+    "y_binned = np.stack((a_binned, b_binned)).transpose((1, 2, 3, 0))"
    ],
    "metadata": {
     "collapsed": false,
@@ -90,22 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = X.reshape(N, SIZE, SIZE, 1)\n",
-    "y = np.stack((A, B)).transpose((1, 2, 3, 0))\n",
-    "# y_binned = np.stack((a_binned, b_binned)).transpose((1, 2, 3, 0))"
+    "y = np.stack((A, B)).transpose((1, 2, 3, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Normalize the data\n",
-    "X = X / 255"
+    "X = X / 255\n",
+    "y = y / 255"
    ],
    "metadata": {
     "collapsed": false,
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def conv_stack(input_layer, filters):\n",
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def encoder_block(input_layer, filters):\n",
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def decoder_block(input_layer, skip_layer, filters):\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def get_model(size, init_filters):\n",
@@ -253,9 +255,10 @@
     "    decoder3 = decoder_block(decoder2, conv1, init_filters)\n",
     "\n",
     "    # soft = Softmax(axis=1)(decoder3)\n",
-    "    outputs = Conv2D(2, 1, padding='same', activation='sigmoid')(decoder3)\n",
+    "    output_a = Conv2D(32, 1, padding='same', activation='sigmoid')(decoder3)\n",
+    "    output_b = Conv2D(32, 1, padding='same', activation='sigmoid')(decoder3)\n",
     "\n",
-    "    model = Model(inputs, outputs)\n",
+    "    model = Model(inputs, [output_a, output_b])\n",
     "    return model"
    ],
    "metadata": {
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -384,10 +387,12 @@
       "__________________________________________________________________________________________________\n",
       "re_lu_13 (ReLU)                 (None, 256, 256, 64) 0           batch_normalization_13[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_14 (Conv2D)              (None, 256, 256, 2)  130         re_lu_13[0][0]                   \n",
+      "conv2d_14 (Conv2D)              (None, 256, 256, 32) 2080        re_lu_13[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_15 (Conv2D)              (None, 256, 256, 32) 2080        re_lu_13[0][0]                   \n",
       "==================================================================================================\n",
-      "Total params: 7,707,522\n",
-      "Trainable params: 7,701,890\n",
+      "Total params: 7,711,552\n",
+      "Trainable params: 7,705,920\n",
       "Non-trainable params: 5,632\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -396,46 +401,7 @@
    "source": [
     "model = get_model(SIZE, 64)\n",
     "model.summary()\n",
-    "model.compile(optimizer=Adam(), loss='mse')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "1/1 [==============================] - 3s 3s/step - loss: 18466.5254\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "Epoch 2/5\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 18443.5898\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "Epoch 3/5\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 18422.8398\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "Epoch 4/5\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 18407.2129\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "Epoch 5/5\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 18396.7812\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<keras.callbacks.History at 0x2bbab518c88>"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(X, y, epochs=5, verbose=1)"
+    "model.compile(optimizer=Adam(), loss='sparse_categorical_crossentropy')"
    ],
    "metadata": {
     "collapsed": false,
@@ -447,9 +413,54 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 5.6666 - conv2d_14_loss: 2.4891 - conv2d_15_loss: 3.1774\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 2/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 5.4679 - conv2d_14_loss: 2.3868 - conv2d_15_loss: 3.0811\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 3/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 5.2437 - conv2d_14_loss: 2.2839 - conv2d_15_loss: 2.9598\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 4/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 5.0583 - conv2d_14_loss: 2.1855 - conv2d_15_loss: 2.8728\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 5/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 5.0571 - conv2d_14_loss: 2.1552 - conv2d_15_loss: 2.9019\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 6/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.7241 - conv2d_14_loss: 2.0032 - conv2d_15_loss: 2.7209\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 7/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.6033 - conv2d_14_loss: 1.9362 - conv2d_15_loss: 2.6672\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 8/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.4278 - conv2d_14_loss: 1.8451 - conv2d_15_loss: 2.5828\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 9/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.2983 - conv2d_14_loss: 1.7780 - conv2d_15_loss: 2.5203\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 10/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.1760 - conv2d_14_loss: 1.7290 - conv2d_15_loss: 2.4470\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 11/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 4.0428 - conv2d_14_loss: 1.6632 - conv2d_15_loss: 2.3796\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 12/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 3.9192 - conv2d_14_loss: 1.6134 - conv2d_15_loss: 2.3058\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 13/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 3.8243 - conv2d_14_loss: 1.5750 - conv2d_15_loss: 2.2493\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 14/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 3.7750 - conv2d_14_loss: 1.5699 - conv2d_15_loss: 2.2051\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 15/15\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 3.6110 - conv2d_14_loss: 1.4921 - conv2d_15_loss: 2.1190\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<keras.callbacks.History at 0x21996694708>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y_hat = model.predict(X)"
+    "model.fit(X, [a_binned, b_binned], epochs=15, verbose=1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -460,17 +471,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "a_hats, b_hats = model.predict(X)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "a_hats = np.argmax(a_hats, axis=3)\n",
+    "b_hats = np.argmax(b_hats, axis=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Real Image\n",
     "L = X[0].reshape((SIZE, SIZE)) * 255\n",
@@ -489,22 +520,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Real Image Binned\n",
     "L = X[0].reshape((SIZE, SIZE)) * 255\n",
-    "a2 = y_binned[0, :, :, 0] * 8\n",
-    "b2 = y_binned[0, :, :, 1] * 8\n",
+    "a2 = y_binned[0, :, :, 0] * 8 + 4\n",
+    "b2 = y_binned[0, :, :, 1] * 8 + 4\n",
     "lab = np.array([L, a2, b2]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
     "cv2.imwrite('002.jpeg', img)"
@@ -518,20 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_hat = y_hat[0, :, :, 0] * 255\n",
-    "b_hat = y_hat[0, :, :, 1] * 255\n",
+    "L = X[0].reshape((SIZE, SIZE)) * 255\n",
+    "a_hat = a_hats[0, :, :] * 8 + 4\n",
+    "b_hat = b_hats[0, :, :] * 8 + 4\n",
     "lab = np.array([L, a_hat, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
     "cv2.imwrite('003.jpeg', img)"
