--- a/main.ipynb
+++ b/main.ipynb
@@ -459,7 +459,7 @@
     }
    ],
    "source": [
-    "model.fit(X, [a_binned, b_binned], epochs=15, verbose=1)"
+    "model.fit(X, [a_binned, b_binned], epochs=10, verbose=1, batch_size=8)"
    ],
    "metadata": {
     "collapsed": false,
@@ -473,7 +473,7 @@
    "execution_count": 22,
    "outputs": [],
    "source": [
-    "a_hats, b_hats = model.predict(X)"
+    "a_hats, b_hats = model.predict(X, batch_size=8)"
    ],
    "metadata": {
     "collapsed": false,
