--- a/main.ipynb
+++ b/main.ipynb
@@ -410,11 +410,16 @@
    "execution_count": 15,
    "outputs": [],
    "source": [
-    "weight_a = [276.4182377999916, 10.096705660138996, 2.160336840606263, 1.8126515533081804, 0.3854523724941714,\n",
-    "            0.22361807604925382, 1.040882132359878, 1.6375415188587383, 4.57322774863995, 37.81061231083443]\n",
+    "# weight_a = [276.4182377999916, 10.096705660138996, 2.160336840606263, 1.8126515533081804, 0.3854523724941714,\n",
+    "#             0.22361807604925382, 1.040882132359878, 1.6375415188587383, 4.57322774863995, 37.81061231083443]\n",
     "\n",
-    "weight_b = [263.46130653, 6.29587218, 2.67742605, 2.33413422, 0.63087839,\n",
-    "            0.31916905, 0.66331561, 0.56931914, 1.04141953, 10.7601525]\n",
+    "weight_a = [50.4182377999916, 5.096705660138996, 1.160336840606263, 1.1126515533081804, 0.3854523724941714,\n",
+    "            0.22361807604925382, 1.040882132359878, 1.1375415188587383, 2.57322774863995, 10.81061231083443]\n",
+    "\n",
+    "# weight_b = [263.46130653, 6.29587218, 2.67742605, 2.33413422, 0.63087839,\n",
+    "#             0.31916905, 0.66331561, 0.56931914, 1.04141953, 10.7601525]\n",
+    "weight_b = [63.46130653, 2.29587218, 1.67742605, 1.13413422, 0.63087839,\n",
+    "            0.31916905, 0.66331561, 0.56931914, 1.04141953, 5.7601525]\n",
     "model.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_a), metrics='accuracy')"
    ],
    "metadata": {
@@ -454,7 +459,7 @@
     "    ModelCheckpoint(\"aero-color_a.h5\", save_best_only=True, save_weights_only=True, monitor='loss')\n",
     "]\n",
     "\n",
-    "model.fit(X, a_hot, epochs=3, verbose=1, batch_size=8, callbacks=callbacks)"
+    "model.fit(X, a_hot, epochs=3, verbose=1, batch_size=4, callbacks=callbacks)"
    ],
    "metadata": {
     "collapsed": false,
@@ -468,7 +473,7 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
-    "a_hats = model.predict(X, batch_size=8)"
+    "a_hats = model.predict(X[0].reshape(1, SIZE, SIZE, 1))"
    ],
    "metadata": {
     "collapsed": false,
