--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -80,13 +80,13 @@
    "outputs": [],
    "source": [
     "SIZE = 256\n",
-    "N = 500\n",
+    "N = 1000\n",
     "epochs = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -344,13 +344,13 @@
    "outputs": [],
    "source": [
     "# Load Model\n",
-    "# model_a.load_weights(\"aero-color_a_v2.h5\")\n",
-    "# model_b.load_weights(\"aero-color_b_v2.h5\")"
+    "model_a.load_weights(\"aero-color_a_10k.h5\")\n",
+    "model_b.load_weights(\"aero-color_b_10k.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -363,19 +363,19 @@
     "#             0.22361807604925382, 1.040882132359878, 1.6375415188587383, 4.57322774863995, 37.81061231083443]\n",
     "\n",
     "weight_a = [25.418237, 5.09670, 1.56033, 1.212651, 0.385452,\n",
-    "            0.2236180, 1.04088, 1.137541, 2.5732, 10.8106]\n",
+    "            0.2236180, 1.04088, 1.137541, 1.5732, 10.8106]\n",
     "\n",
     "# weight_b = [263.46130653, 6.29587218, 2.67742605, 2.33413422, 0.63087839,\n",
     "#             0.31916905, 0.66331561, 0.56931914, 1.04141953, 10.7601525]\n",
-    "weight_b = [23.46130, 2.29587, 1.67742, 1.13413, 0.63087,\n",
-    "            0.31916, 0.66331, 0.76931, 0.84141, 2.7601]\n",
+    "weight_b = [23.46130, 2.29587, 1.67742, 1.23413, 0.63087,\n",
+    "            0.31916, 0.66331, 0.56931, 0.84141, 2.7601]\n",
     "# model_a.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_a), metrics='accuracy')\n",
-    "model_b.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_b), metrics='accuracy')\n"
+    "# model_b.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_b), metrics='accuracy')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -447,45 +447,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "1250/1250 [==============================] - 497s 391ms/step - loss: 1.1332 - accuracy: 0.3048\n",
-      "Epoch 2/3\n",
-      "1250/1250 [==============================] - 490s 392ms/step - loss: 1.1169 - accuracy: 0.3054\n",
-      "Epoch 3/3\n",
-      "1250/1250 [==============================] - 490s 392ms/step - loss: 1.1141 - accuracy: 0.3063\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1b3ee3bc910>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train Model\n",
-    "callbacks = [\n",
-    "    ModelCheckpoint(\"aero-color_b_10k.h5\", save_best_only=True, save_weights_only=True, monitor='loss')\n",
+    "callbacks_a = [\n",
+    "    ModelCheckpoint(\"aero-color_a_ft.h5\", save_best_only=True, save_weights_only=True, monitor='loss')\n",
     "]\n",
     "\n",
-    "# model_a.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks)\n",
-    "model_b.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks)"
+    "callbacks_b = [\n",
+    "    ModelCheckpoint(\"aero-color_b_ft.h5\", save_best_only=True, save_weights_only=True, monitor='loss')\n",
+    "]\n",
+    "\n",
+    "\n",
+    "model_a.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks_a)\n",
+    "model_b.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -494,7 +476,7 @@
    },
    "outputs": [],
    "source": [
-    "INDEX = 7\n",
+    "INDEX = 400\n",
     "X = cv2.imread(img_paths[INDEX], 0) / 255.0\n",
     "a = cv2.imread(a_paths[INDEX], 0) \n",
     "b = cv2.imread(b_paths[INDEX], 0)  \n",
@@ -507,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -526,13 +508,13 @@
    },
    "outputs": [],
    "source": [
-    "# a_hats = model_a.predict(X.reshape(1, SIZE, SIZE, 1))\n",
+    "a_hats = model_a.predict(X.reshape(1, SIZE, SIZE, 1))\n",
     "b_hats = model_b.predict(X.reshape(1, SIZE, SIZE, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -548,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -557,13 +539,13 @@
    },
    "outputs": [],
    "source": [
-    "# a_hats = np.argmax(a_hats, axis=3)\n",
+    "a_hats = np.argmax(a_hats, axis=3)\n",
     "b_hats = np.argmax(b_hats, axis=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -583,11 +565,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 39,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -614,11 +594,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 40,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -645,30 +623,29 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 41,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "L = X.reshape((SIZE, SIZE)) * 255\n",
-    "# a_hat = a_hats[0, :, :]\n",
+    "a_hat = a_hats[0, :, :]\n",
     "b_hat = b_hats[0, :, :]\n",
-    "# a_hat = bins[a_hat] + 0.5 * (bins[a_hat + 1] - bins[a_hat])\n",
+    "a_hat = bins[a_hat] + 0.5 * (bins[a_hat + 1] - bins[a_hat])\n",
     "b_hat = bins[b_hat] + 0.5 * (bins[b_hat + 1] - bins[b_hat])\n",
+    "lab = np.array([L, a_hat, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "# lab = np.array([L, a_hat, b]).transpose((1, 2, 0)).astype('uint8')\n",
-    "lab = np.array([L, a, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
+    "# lab = np.array([L, a, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
     "cv2.imwrite('003.jpeg', img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -690,42 +667,70 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 43,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cv2.imwrite('a_our.jpeg', a_hat)\n",
-    "# cv2.imwrite('a.jpeg', a)\n",
+    "cv2.imwrite('a_our.jpeg', a_hat)\n",
+    "cv2.imwrite('a.jpeg', a)\n",
     "cv2.imwrite('b_our.jpeg', b_hat)\n",
     "cv2.imwrite('b.jpeg', b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
-     "execution_count": 44,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# cv2.imwrite('a_dummy.jpeg', a_dummy)\n",
-    "cv2.imwrite('b_dummy.jpeg', b_dummy)"
+    "cv2.imwrite('a_dummy.jpeg', a_dummy)\n",
+    "cv2.imwrite('b_dummy.jpeg', b_dummy)\n",
+    "cv2.imwrite('bnw.jpeg', L)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4: 0.0004730224609375, 5: 0.2753753662109375, 6: 0.633514404296875, 8: 0.09063720703125}\n",
+      "{3: 0.0014801025390625, 4: 0.0413970947265625, 5: 0.6931915283203125, 6: 0.124969482421875, 7: 0.1383209228515625, 8: 0.000640869140625}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unique, counts = np.unique(a_hats, return_counts=True)\n",
+    "# counts = counts / counts.sum()\n",
+    "# # weights_a = counts.sum() / counts / num_bins\n",
+    "# print(dict(zip(unique, counts)))\n",
+    "#\n",
+    "# unique, counts = np.unique(a_dummy, return_counts=True)\n",
+    "# counts = counts / counts.sum()\n",
+    "# # weights_a = counts.sum() / counts / num_bins\n",
+    "# print(dict(zip(unique, counts)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -733,9 +738,9 @@
    "hash": "57b46abc312806a63d80a7dd5b8c712df31d65b7c9ba39540c90a05878203ef6"
   },
   "kernelspec": {
-   "display_name": "PyCharm (aero-color)",
+   "name": "pycharm-db3b9cab",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (aero-color)"
   },
   "language_info": {
    "codemirror_mode": {
