--- a/main.ipynb
+++ b/main.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -163,6 +163,7 @@
    "outputs": [],
    "source": [
     "bins_list = [0, 64, 96, 112, 120, 128, 136, 144, 160, 192, 256]\n",
+    "bin_val = np.array([32, 80, 104, 116, 124, 132, 140, 152, 176, 224])\n",
     "num_bins = len(bins_list) - 1\n",
     "bins = np.array(bins_list)\n",
     "# a_binned = np.digitize(A, bins) - 1\n",
@@ -460,14 +461,13 @@
     "    ModelCheckpoint(\"aero-color_b_ft.h5\", save_best_only=True, save_weights_only=True, monitor='loss')\n",
     "]\n",
     "\n",
-    "\n",
     "model_a.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks_a)\n",
     "model_b.fit(load_data, epochs=epochs, verbose=1, batch_size=batch_size, callbacks=callbacks_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -476,30 +476,23 @@
    },
    "outputs": [],
    "source": [
-    "INDEX = 400\n",
+    "INDEX = 25000\n",
     "X = cv2.imread(img_paths[INDEX], 0) / 255.0\n",
-    "a = cv2.imread(a_paths[INDEX], 0) \n",
-    "b = cv2.imread(b_paths[INDEX], 0)  \n",
+    "a = cv2.imread(a_paths[INDEX], 0)\n",
+    "b = cv2.imread(b_paths[INDEX], 0)\n",
     "\n",
+    "\n",
+    "a_dummy = np.digitize(a, bins) - 1\n",
+    "b_dummy = np.digitize(b, bins) - 1\n",
     "\n",
     "# X = cv2.imread('data/bnw/8.jpeg', 0) / 255.0\n",
     "# a = cv2.imread('data/a/8.jpeg', 0)\n",
-    "# b = cv2.imread('data/b/8.jpeg', 0)"
+    "# b = cv2.imread('data/b/8.jpeg', 0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_dummy = np.digitize(a, bins) - 1\n",
-    "b_dummy = np.digitize(b, bins) - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -514,48 +507,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# print(np.sum(a_hats[0, :, 0, 0]))\n",
-    "# print(np.sum(a_hats[0, 0, :, 0]))\n",
-    "# print(np.sum(a_hats[0, 0, 0, :]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a_hats = np.argmax(a_hats, axis=3)\n",
-    "b_hats = np.argmax(b_hats, axis=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# classes = np.arange(10).reshape(10,1)\n",
-    "# a_hats = np.matmul(a_hats, classes)\n"
+    "# bin_vals_arr = np.array(bin_vals)\n",
+    "\n",
+    "a_hats = np.log(a_hats) / 0.38\n",
+    "a_hats = np.exp(a_hats) / np.sum(np.exp(a_hats), axis=3, keepdims=True)\n",
+    "a_hats = np.matmul(a_hats, bin_val)\n",
+    "\n",
+    "b_hats = np.log(b_hats) / 0.38\n",
+    "b_hats = np.exp(b_hats) / np.sum(np.exp(b_hats), axis=3, keepdims=True)\n",
+    "b_hats = np.matmul(b_hats, bin_val)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 200,
+   "outputs": [],
+   "source": [
+    "# a_hats = np.argmax(a_hats, axis=3)\n",
+    "# b_hats = np.argmax(b_hats, axis=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -567,7 +551,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 121,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -596,56 +580,54 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 122,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Real Image Binned\n",
-    "L = X.reshape((SIZE, SIZE)) * 255\n",
-    "a_dummy = bins[a_dummy] + 0.5 * (bins[a_dummy + 1] - bins[a_dummy])\n",
-    "b_dummy = bins[b_dummy] + 0.5 * (bins[b_dummy + 1] - bins[b_dummy])\n",
-    "lab = np.array([L, a_dummy, b_dummy]).transpose((1, 2, 0)).astype('uint8')\n",
-    "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
-    "cv2.imwrite('002.jpeg', img)"
+    "# L = X.reshape((SIZE, SIZE)) * 255\n",
+    "# a_dummy = bins[a_dummy] + 0.5 * (bins[a_dummy + 1] - bins[a_dummy])\n",
+    "# b_dummy = bins[b_dummy] + 0.5 * (bins[b_dummy + 1] - bins[b_dummy])\n",
+    "# lab = np.array([L, a_dummy, b_dummy]).transpose((1, 2, 0)).astype('uint8')\n",
+    "# img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
+    "# cv2.imwrite('002.jpeg', img)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 204,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 123,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "L = X.reshape((SIZE, SIZE)) * 255\n",
-    "a_hat = a_hats[0, :, :]\n",
-    "b_hat = b_hats[0, :, :]\n",
-    "a_hat = bins[a_hat] + 0.5 * (bins[a_hat + 1] - bins[a_hat])\n",
-    "b_hat = bins[b_hat] + 0.5 * (bins[b_hat + 1] - bins[b_hat])\n",
+    "a_hat = a_hats[0, :, :].astype('int')\n",
+    "b_hat = b_hats[0, :, :].astype('int')\n",
     "lab = np.array([L, a_hat, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "# lab = np.array([L, a_hat, b]).transpose((1, 2, 0)).astype('uint8')\n",
     "# lab = np.array([L, a, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
-    "cv2.imwrite('003.jpeg', img)"
-   ]
+    "cv2.imwrite('002.jpeg', img)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 206,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -669,7 +651,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 124,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,14 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 125,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,17 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{4: 0.0004730224609375, 5: 0.2753753662109375, 6: 0.633514404296875, 8: 0.09063720703125}\n",
-      "{3: 0.0014801025390625, 4: 0.0413970947265625, 5: 0.6931915283203125, 6: 0.124969482421875, 7: 0.1383209228515625, 8: 0.000640869140625}\n"
-     ]
-    }
-   ],
+   "execution_count": 208,
+   "outputs": [],
    "source": [
     "# unique, counts = np.unique(a_hats, return_counts=True)\n",
     "# counts = counts / counts.sum()\n",
