--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -80,13 +80,13 @@
    "outputs": [],
    "source": [
     "SIZE = 256\n",
-    "N = 1000\n",
-    "epochs = 3"
+    "N = 10000\n",
+    "epochs = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -345,8 +345,8 @@
    "outputs": [],
    "source": [
     "# Load Model\n",
-    "model_a.load_weights(\"aero-color_a_10k.h5\")\n",
-    "model_b.load_weights(\"aero-color_b_10k.h5\")"
+    "model_a.load_weights(\"aero-color_a_25k.h5\")\n",
+    "model_b.load_weights(\"aero-color_b_25k.h5\")"
    ]
   },
   {
@@ -363,20 +363,20 @@
     "# weight_a = [276.4182377999916, 10.096705660138996, 2.160336840606263, 1.8126515533081804, 0.3854523724941714,\n",
     "#             0.22361807604925382, 1.040882132359878, 1.6375415188587383, 4.57322774863995, 37.81061231083443]\n",
     "\n",
-    "weight_a = [25.418237, 5.09670, 1.56033, 1.212651, 0.385452,\n",
-    "            0.2236180, 1.04088, 1.137541, 1.5732, 10.8106]\n",
+    "weight_a = [25.418237, 5.09670, 1.36033, 1.212651, 0.385452,\n",
+    "            0.2236180, 1.04088, 1.137541, 1.5732, 8.8106]\n",
     "\n",
     "# weight_b = [263.46130653, 6.29587218, 2.67742605, 2.33413422, 0.63087839,\n",
     "#             0.31916905, 0.66331561, 0.56931914, 1.04141953, 10.7601525]\n",
-    "weight_b = [23.46130, 2.29587, 1.67742, 1.23413, 0.63087,\n",
+    "weight_b = [20.46130, 2.29587, 1.47742, 1.23413, 0.63087,\n",
     "            0.31916, 0.66331, 0.56931, 0.84141, 2.7601]\n",
-    "# model_a.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_a), metrics='accuracy')\n",
-    "# model_b.compile(optimizer=Adam(0.01), loss=weighted_categorical_crossentropy(weights=weight_b), metrics='accuracy')\n"
+    "model_a.compile(optimizer=Adam(0.0001), loss=weighted_categorical_crossentropy(weights=weight_a))\n",
+    "model_b.compile(optimizer=Adam(0.0001), loss=weighted_categorical_crossentropy(weights=weight_b))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -418,22 +418,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LoadData' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_13160/2953288399.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     13\u001B[0m \u001B[0mbatch_size\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     14\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 15\u001B[1;33m load_data = LoadData(\n\u001B[0m\u001B[0;32m     16\u001B[0m     \u001B[0mbatch_size\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mSIZE\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_paths\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mb_paths\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mbins\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m )\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'LoadData' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
     "total_samples = N\n",
     "\n",
-    "# random.Random(42).shuffle(img_paths)\n",
-    "# random.Random(42).shuffle(a_paths)\n",
-    "# random.Random(42).shuffle(b_paths)\n",
+    "random.Random(42).shuffle(img_paths)\n",
+    "random.Random(42).shuffle(a_paths)\n",
+    "random.Random(42).shuffle(b_paths)\n",
     "\n",
     "img_paths = img_paths[:total_samples]\n",
     "a_paths = a_paths[:total_samples]\n",
@@ -467,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -476,7 +488,7 @@
    },
    "outputs": [],
    "source": [
-    "INDEX = 25000\n",
+    "INDEX = 500\n",
     "X = cv2.imread(img_paths[INDEX], 0) / 255.0\n",
     "a = cv2.imread(a_paths[INDEX], 0)\n",
     "b = cv2.imread(b_paths[INDEX], 0)\n",
@@ -492,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -507,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "# a_hats = np.argmax(a_hats, axis=3)\n",
@@ -539,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -551,7 +563,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 201,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,23 +580,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Real Image Binned\n",
     "# L = X.reshape((SIZE, SIZE)) * 255\n",
@@ -597,13 +600,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 204,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +619,7 @@
     "# lab = np.array([L, a_hat, b]).transpose((1, 2, 0)).astype('uint8')\n",
     "# lab = np.array([L, a, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
-    "cv2.imwrite('002.jpeg', img)"
+    "cv2.imwrite('0022.jpeg', img)"
    ],
    "metadata": {
     "collapsed": false,
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -651,7 +654,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 206,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 207,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# unique, counts = np.unique(a_hats, return_counts=True)\n",
