--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Dense, Dropout, Input, ReLU, Softmax\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, BatchNormalization, Conv2DTranspose, Concatenate\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -80,13 +81,13 @@
    "outputs": [],
    "source": [
     "SIZE = 256\n",
-    "N = 10000\n",
+    "N = 50000\n",
     "epochs = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +98,12 @@
     "#     X[i - 1] = cv2.imread('data/bnw/' + str(i + 7) + '.jpeg', 0)\n",
     "#     A[i - 1] = cv2.imread('data/a/' + str(i + 7) + '.jpeg', 0)\n",
     "#     B[i - 1] = cv2.imread('data/b/' + str(i + 7) + '.jpeg', 0)\n",
-    "\n"
+    "#\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -345,13 +346,13 @@
    "outputs": [],
    "source": [
     "# Load Model\n",
-    "model_a.load_weights(\"aero-color_a_25k.h5\")\n",
-    "model_b.load_weights(\"aero-color_b_25k.h5\")"
+    "model_a.load_weights(\"aero-color_a_10k.h5\")\n",
+    "model_b.load_weights(\"aero-color_b_10k.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -418,34 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'LoadData' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_13160/2953288399.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     13\u001B[0m \u001B[0mbatch_size\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     14\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 15\u001B[1;33m load_data = LoadData(\n\u001B[0m\u001B[0;32m     16\u001B[0m     \u001B[0mbatch_size\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mSIZE\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_paths\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mb_paths\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mbins\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m )\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'LoadData' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "total_samples = N\n",
     "\n",
-    "random.Random(42).shuffle(img_paths)\n",
-    "random.Random(42).shuffle(a_paths)\n",
-    "random.Random(42).shuffle(b_paths)\n",
+    "# random.Random(42).shuffle(img_paths)\n",
+    "# random.Random(42).shuffle(a_paths)\n",
+    "# random.Random(42).shuffle(b_paths)\n",
     "\n",
     "img_paths = img_paths[:total_samples]\n",
     "a_paths = a_paths[:total_samples]\n",
@@ -460,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -488,23 +477,23 @@
    },
    "outputs": [],
    "source": [
-    "INDEX = 500\n",
+    "INDEX = 25000\n",
     "X = cv2.imread(img_paths[INDEX], 0) / 255.0\n",
     "a = cv2.imread(a_paths[INDEX], 0)\n",
     "b = cv2.imread(b_paths[INDEX], 0)\n",
     "\n",
+    "#\n",
+    "# X = cv2.imread('data/bnw/312.jpeg', 0) / 255.0\n",
+    "# a = cv2.imread('data/a/312.jpeg', 0)\n",
+    "# b = cv2.imread('data/b/312.jpeg', 0)\n",
     "\n",
     "a_dummy = np.digitize(a, bins) - 1\n",
-    "b_dummy = np.digitize(b, bins) - 1\n",
-    "\n",
-    "# X = cv2.imread('data/bnw/8.jpeg', 0) / 255.0\n",
-    "# a = cv2.imread('data/a/8.jpeg', 0)\n",
-    "# b = cv2.imread('data/b/8.jpeg', 0)\n"
+    "b_dummy = np.digitize(b, bins) - 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -519,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 202,
    "outputs": [],
    "source": [
     "# a_hats = np.argmax(a_hats, axis=3)\n",
@@ -551,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -563,7 +552,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 40,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 204,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -600,13 +589,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 205,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 42,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +608,7 @@
     "# lab = np.array([L, a_hat, b]).transpose((1, 2, 0)).astype('uint8')\n",
     "# lab = np.array([L, a, b_hat]).transpose((1, 2, 0)).astype('uint8')\n",
     "img = cv2.cvtColor(lab, cv2.COLOR_Lab2BGR)\n",
-    "cv2.imwrite('0022.jpeg', img)"
+    "cv2.imwrite('002.jpeg', img)"
    ],
    "metadata": {
     "collapsed": false,
@@ -630,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 207,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -654,7 +643,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 44,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,27 +657,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 45,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv2.imwrite('a_dummy.jpeg', a_dummy)\n",
-    "cv2.imwrite('b_dummy.jpeg', b_dummy)\n",
+    "# cv2.imwrite('a_dummy.jpeg', a_dummy)\n",
+    "# cv2.imwrite('b_dummy.jpeg', b_dummy)\n",
     "cv2.imwrite('bnw.jpeg', L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 209,
    "outputs": [],
    "source": [
     "# unique, counts = np.unique(a_hats, return_counts=True)\n",
